--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Frontend Developer</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error cupiditate ipsa, minus accusamus eligendi officiis dicta distinctio voluptates tenetur autem explicabo similique doloremque dignissimos nostrum consequatur reprehenderit hic amet sed ad delectus a molestiae numquam aperiam ea? Rem dicta non delectus, eos ut et at dolores?</p>
+            <p>Highly skilled and motivated Web Developer with a Bachelor of Computer Applications (BCA) degree from Guru Gobind Singh Indraprastha University, boasting extensive hands-on experience in both front-end and backend development using the MERN stack. Proficient in creating responsive, dynamic web applications with MongoDB, Express.js, React, and Node.js. Demonstrates strong expertise in JavaScript, HTML, CSS ReactJS. Adept at working collaboratively within cross-functional teams to deliver high-quality projects, continually enhancing skills to stay abreast of emerging web technologies and industry trends?</p>
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
